[package]
name = "tacview"
version = "0.2.0"
authors = ["Markus Ast <m+cargo@rkusa.st>", "Matt Kline <matt@bitbashing.io>"]
license = "MIT OR Apache-2.0"
description = "ACMI (Tacview) flight recordings v2.1 parser and writer."
repository = "https://github.com/rkusa/tacview"
edition = "2021"

[dependencies]
arrayvec = "0.7"
thiserror = "1.0"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
